# math

./: AUTHORS  CMakeLists.txt  Doxyfile  Makefile.am  Makefile.in  NEWS  README  anint.f90  cfgread.c  cfgread.h  cgrad.c  cgrad.h  codes.h  combinadic.c  combinadic.h  conf.h  config.h.in  configure  configure.ac  fmtout.h  geom.h  graph.c  graph.h  lagrange.c  legendre.c  legendre.h  linalg.f90  linalg.h  math.cpp  math.pc.in  math_config.h  math_config.h.in  mls.c  mls.h  mpifmtout.h  mqrbf.c  mqrbf.h  nuclei.c  nurbs.c  nurbs.h  (+17 more)
.devcontainer/: Dockerfile  devcontainer.json
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
doc/source/: conf.py  index.rst
include/: conf.h  geom.h  lagrange.h  mls.h  nuclei.h  punity.h  sparse.h  wavelet.h
test/: CMakeLists.txt  Makefile.am  Makefile.in  funcs.c  funcs.h  mbuild.c  pukscfg.h  puksvar.h  template-points.c  template-punity.c  template-quadrature.c  template.c  test1.c  test11.c  test12.c  test13.c  test14.c  test15.c  test16.c  test17.c  test18.c  test19.c  test2.c  test20.c  test21.c  test22-solver.c  test22.c  test23.c  test24.c  test25.c  test26.c  test27.c  test28.c  test29.c  test30-solver.c  test30.c  test31.c  test32.c  test33.c  test34.c  (+19 more)
test/cuda/: puksham-cuda.cu
test/cuda/src/: combinadic-cuda.cu  mbuild-cuda.cu  nuclei-cuda.cu  points-cuda.cu  punity-cuda.cu  trees-cuda.cu
test/examples/: test.cfg
test/gauss/: gauss14.quad  gauss16.quad  gauss18.quad  gauss20.quad  gauss6.quad
test/puksham/: Makefile  Makefile.am  Makefile.in  pukscfg.h  puksham  puksham.c
test/puksham/.deps/: puksham-cgrad.Po  puksham-funcs.Po  puksham-mbuild.Po  puksham-nuclei.Po  puksham-pbc.Po  puksham-points.Po  puksham-puksham.Po  puksham-punity.Po
