CC = gcc
bin_PROGRAMS = test1 test2 test4 test6 test7 test8 test9 test11 test12 test13 test14 test15 test16 test17 test18 test19 test20 test21 test22 test23 test24 test25 test26 test27 test28 test29 test30 test31 test32 template test33 test34 template-points template-punity test35 test36 test37 test38 test39 template-quadrature test40 test41 test42 test43 test43-mpi test44 test45 test46
include_HEADERS = puksvar.h pukscfg.h funcs.h
SUBDIRS = puksham
EXTRA_DIST = gauss/gauss6.quad gauss/gauss14.quad gauss/gauss16.quad gauss/gauss18.quad gauss/gauss20.quad examples/test.cfg cuda
test1_SOURCES = test1.c ../mls.c ../quadrature.c
test1_CFLAGS = $(util_CFLAGS) -I../include
test1_LDADD = $(util_LIBS) ../linalg.f90 -lm -lgfortran
test2_SOURCES = test2.c ../mls.c ../quadrature.c
test2_CFLAGS = $(util_CFLAGS) -I../include
test2_LDADD = $(util_LIBS) ../linalg.f90 -lm -lgfortran
test2_LDFLAGS = -lm -lgfortran
test4_SOURCES = test4.c ../legendre.c
test4_CFLAGS = -I../include $(util_CFLAGS)
test4_LDADD = $(util_LIBS)
test6_SOURCES = test6.c
test6_LDFLAGS = -lm
test7_SOURCES = test7.c
test7_CFLAGS = $(util_CFLAGS)
test7_LDADD = $(util_LIBS)
test8_SOURCES = test8.c ../mls.c
test8_CFLAGS = -I../include $(util_CFLAGS)
test8_LDADD = $(util_LIBS) ../linalg.f90 -lgfortran -lm
test8_LDFLAGS = -lgfortran -lm
test9_SOURCES = test9.c ../lagrange.c
test9_LDADD = ../linalg.f90 $(util_LIBS) -lgfortran -lm
test9_CFLAGS = -I../include $(util_CFLAGS)
test9_LDFLAGS = -lm -lgfortran
test11_SOURCES = test11.c ../mls.c
test11_CFLAGS = -I../include $(util_CFLAGS)
test11_LDADD = $(util_LIBS) ../linalg.f90 -lgfortran -lm
test11_LDFLAGS = -lgfortran -lm
test12_SOURCES = test12.c ../mls.c ../cgrad.c ../points.c
test12_CFLAGS = -I../include $(util_CFLAGS)
test12_LDADD = $(util_LIBS) ../linalg.f90 -lgfortran -lm
test12_LDFLAGS = -lgfortran -lm
test13_SOURCES = test13.c ../lagrange.c ../cgrad.c
test13_LDADD = $(util_LIBS) ../linalg.f90 -lgfortran -lm
test13_LDFLAGS = -lgfortran -lm
test13_CFLAGS = -I../include
test14_LDADD = ../linalg.f90 -lgfortran -lm
test14_SOURCES = test14.c ../mqrbf.c
test14_LDFLAGS = -lgfortran -lm
test14_CFLAGS = -I../include
test15_SOURCES = test15.c ../mls.c ../cgrad.c ../points.c
test15_CFLAGS = -I../include $(util_CFLAGS)
test15_LDFLAGS = -lgfortran -lm
test15_LDADD = $(util_LIBS) ../linalg.f90 -lgfortran -lm
test16_SOURCES = test16.c ../points.c ../nuclei.c
test16_LDADD = $(util_LIBS)
test16_CFLAGS = $(util_CFLAGS) -I../include
test17_SOURCES = test17.c
test17_LDADD = $(util_LIBS)
test17_CFLAGS = $(util_CFLAGS)
test18_SOURCES = test18.c ../points.c ../nuclei.c
test18_LDADD = $(neural_LIBS) $(util_LIBS)
test18_CFLAGS = $(neural_CFLAGS) $(util_CFLAGS) -I../include
test19_SOURCES = test19.c ../points.c
test19_LDADD = $(neural_LIBS) $(util_LIBS)
test19_CFLAGS = $(neural_CFLAGS) $(util_CFLAGS) -I../include
test20_SOURCES = test20.c ../mls.c ../cgrad.c ../points.c
test20_CFLAGS = -I../include $(util_CFLAGS)
test20_LDFLAGS = -lgfortran -lm
test20_LDADD = $(util_LIBS) ../linalg.f90 -lgfortran -lm
test21_SOURCES = test21.c ../mls.c ../cgrad.c ../points.c
test21_CFLAGS = -I../include $(util_CFLAGS)
test21_LDFLAGS = -lgfortran -lm
test21_LDADD = $(util_LIBS) ../linalg.f90 -lgfortran -lm
test22_SOURCES = test22.c ../mls.c ../cgrad.c ../points.c ../sparse.c test22-solver.c
test22_CFLAGS = -I../include $(util_CFLAGS)
test22_LDFLAGS = -lgfortran -lm
test22_LDADD = $(util_LIBS) ../linalg.f90 ../nuclei.c -lgfortran -lm
template_SOURCES = template.c
template_CFLAGS = -I../include $(util_CFLAGS)
template_LDFLAGS = -lm
template_LDADD = $(util_LIBS)
template_points_SOURCES = template-points.c ../points.c
template_points_CFLAGS = -I../include $(util_CFLAGS)
template_points_LDFLAGS = -lm
template_points_LDADD = $(util_LIBS)
template_punity_SOURCES = template-punity.c ../points.c ../punity.c
template_punity_CFLAGS = -I../include $(util_CFLAGS)
template_punity_LDFLAGS = -lm
template_punity_LDADD = $(util_LIBS)
test23_SOURCES = test23.c ../nurbs.c ../points.c
test23_LDFLAGS = -lm
test23_LDADD = $(util_LIBS)
test23_CFLAGS = -I../include $(util_CFLAGS)
test24_SOURCES = test24.c ../mls.c ../cgrad.c ../points.c ../sparse.c
test24_CFLAGS = -I../include $(util_CFLAGS)
test24_LDFLAGS = -lgfortran -lm
test24_LDADD = $(util_LIBS) ../linalg.f90 ../nuclei.c -lgfortran -lm
test25_SOURCES = test25.c ../points.c ../mls.c
test25_CFLAGS = -I../include $(util_CFLAGS)
test25_LDFLAGS = -lgfortran -lm
test25_LDADD = $(util_LIBS) ../linalg.f90 ../nuclei.c -lgfortran -lm
test26_SOURCES = test26.c ../points.c ../mls.c
test26_CFLAGS = -I../include $(util_CFLAGS)
test26_LDFLAGS = -lgfortran -lm
test26_LDADD = $(util_LIBS) ../linalg.f90 ../nuclei.c -lgfortran -lm
test27_SOURCES = test27.c ../points.c ../mls.c ../punity.c
test27_CFLAGS = -I../include $(util_CFLAGS)
test27_LDFLAGS = -lgfortran -lm
test27_LDADD = $(util_LIBS) ../linalg.f90 ../nuclei.c -lgfortran -lm
test28_SOURCES = test28.c ../points.c ../punity.c ../sparse.c
test28_CFLAGS = -I../include $(util_CFLAGS)
test28_LDFLAGS = -lgfortran -lm
test28_LDADD = $(util_LIBS) ../linalg.f90 -lgfortran -lm
test29_SOURCES = test29.c ../points.c
test29_CFLAGS = -I../include $(util_CFLAGS)
test29_LDFLAGS = -lgfortran -lm
test29_LDADD = $(util_LIBS) -lgfortran -lm
test30_SOURCES = test30.c ../mls.c ../cgrad.c ../points.c ../sparse.c ../punity.c test30-solver.c
test30_CFLAGS = -I../include $(util_CFLAGS)
test30_LDFLAGS = -lgfortran -lm
test30_LDADD = $(util_LIBS) ../linalg.f90 ../nuclei.c -lgfortran -lm
test31_SOURCES = test31.c ../cgrad.c
test31_LDADD = $(util_LIBS) ../linalg.f90 -lgfortran -lm
test31_LDFLAGS = -lgfortran -lm
test31_CFLAGS = -I../include 
test32_SOURCES = test32.c ../mls.c ../cgrad.c ../points.c ../sparse.c test22-solver.c
test32_CFLAGS = -I../include $(util_CFLAGS)
test32_LDFLAGS = -lgfortran -lm
test32_LDADD = $(util_LIBS) ../linalg.f90 ../nuclei.c -lgfortran -lm
test33_SOURCES = test33.c ../points.c ../punity.c ../cgrad.c ../nuclei.c
test33_CFLAGS = -I../include $(util_CFLAGS)
test33_LDFLAGS = -lm
test33_LDADD = $(util_LIBS)
test34_SOURCES = test34.c ../points.c ../cgrad.c
test34_CFLAGS = -I../include $(util_CFLAGS)
test34_LDFLAGS = -lm
test34_LDADD = $(util_LIBS)
test35_SOURCES = test35.c ../points.c ../punity.c
test35_CFLAGS = -I../include $(util_CFLAGS)
test35_LDFLAGS = -lm
test35_LDADD = $(util_LIBS)
test36_SOURCES = test36.c ../points.c ../punity.c ../cgrad.c
test36_CFLAGS = -I../include $(util_CFLAGS)
test36_LDFLAGS = -lm
test36_LDADD = $(util_LIBS)
test37_SOURCES = test37.c ../points.c ../punity.c
test37_CFLAGS = -I../include $(util_CFLAGS)
test37_LDFLAGS = -lm
test37_LDADD = $(util_LIBS)
test38_SOURCES = test38.c ../points.c ../punity.c ../cgrad.c ../nuclei.c
test38_CFLAGS = -I../include $(util_CFLAGS)
test38_LDFLAGS = -lm
test38_LDADD = $(util_LIBS)
test39_SOURCES = test39.c ../points.c ../punity.c ../cgrad.c ../nuclei.c
test39_CFLAGS = -I../include $(util_CFLAGS)
test39_LDFLAGS = -lm
test39_LDADD = $(util_LIBS)
template_quadrature_SOURCES = template-quadrature.c ../points.c ../punity.c
template_quadrature_CFLAGS = -I../include $(util_CFLAGS)
template_quadrature_LDFLAGS = -lm
template_quadrature_LDADD = $(util_LIBS)
test40_SOURCES = test40.c ../points.c ../punity.c
test40_CFLAGS = -I../include $(util_CFLAGS)
test40_LDFLAGS = -lm
test40_LDADD = $(util_LIBS)
test41_SOURCES = test41.c ../legendre.c
test41_CFLAGS = -I../include $(util_CFLAGS)
test41_LDADD = $(util_LIBS)
test42_SOURCES = test42.c ../points.c ../punity.c ../cgrad.c ../legendre.c
test42_CFLAGS = -I../include $(util_CFLAGS)
test42_LDFLAGS = -lm
test42_LDADD = $(util_LIBS)
test43_SOURCES = test43.c ../points.c ../punity.c ../cgrad.c ../legendre.c ../nuclei.c
test43_CFLAGS = -I../include $(util_CFLAGS)
test43_LDFLAGS = -lm
test43_LDADD = $(util_LIBS)
test43_mpi_SOURCES = test43-mpi.c ../points.c ../punity.c ../cgrad.c ../legendre.c ../nuclei.c
test43_mpi_CFLAGS = -I../include $(util_CFLAGS)
test43_mpi_LDFLAGS = -lm
test43_mpi_LDADD = $(util_LIBS)
test44_SOURCES = test44.c ../points.c ../punity.c ../cgrad.c ../legendre.c ../nuclei.c mbuild.c funcs.c
test44_CFLAGS = -I../include -I./ $(util_CFLAGS)
test44_LDFLAGS = -lm
test44_LDADD = $(util_LIBS)
test45_SOURCES = test45.c ../points.c ../punity.c ../cgrad.c ../legendre.c ../nuclei.c mbuild.c funcs.c
test45_CFLAGS = -I../include -I./ $(util_CFLAGS)
test45_LDFLAGS = -lm
test45_LDADD = $(util_LIBS)
test46_SOURCES = test46.c ../points.c ../punity.c ../cgrad.c ../legendre.c ../nuclei.c mbuild-nsymm.c funcs.c
test46_CFLAGS = -I../include -I./ $(util_CFLAGS)
test46_LDFLAGS = -lm
test46_LDADD = $(util_LIBS)

